Swapped Percipitation Percentage info with UV Index info.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -39,8 +39,8 @@
             <div class="row justify-content-center">
                 <div class="col-md-4">
                     <div class="card shadow-sm text-center p-3 mb-4" style="border-radius: 15px;">
-                        <h4 class="text-secondary">💦 Percipitation Probability</h4>
-                        <h2 class="text-primary fw-bold">@ViewBag.PercipProb%</h2>
+                        <h4 class="text-secondary">☀ UV Index</h4>
+                        <h2 class="text-success fw-bold">@ViewBag.UvIndex</h2>
                     </div>
                 </div>
                 <div class="col-md-4">
